modified:   main.pdf 	new file:   main.synctex(busy) 	modified:   main.tex 	modified:   main.toc 	modified:   titlepage_example.tex 	modified:   main.pdf 	modified:   main.synctex(busy)

--- a/main.tex
+++ b/main.tex
@@ -1,13 +1,54 @@
-\documentclass[a4paper,12pt]{article}
-\usepackage[12pt]{extsizes}
-\usepackage[T2A]{fontenc}
+\documentclass[14pt,a4paper]{extarticle}
+\usepackage[left=3cm, right=1.5cm, top=2cm, bottom=2cm]{geometry}
+
+% Межстрочный интервал
+\usepackage{setspace}
+\onehalfspacing
+
+% Поддержка русского языка
 \usepackage[utf8]{inputenc}
+\usepackage[T2A]{fontenc}
 \usepackage[english, russian]{babel}
-\usepackage[left=3cm,right=1.5cm,top=2cm,bottom=2cm]{geometry}
+
+% Шрифт Times New Roman
+\usepackage{mathptmx}
+
+% Абзацный отступ
+\setlength{\parindent}{1.25cm}
+
+% Выравнивание по ширине
+\sloppy
+% можно делать пробелы длиннее (для корректного переноса длинных терминов)
+\emergencystretch=1em
+
+% Нумерация страниц (титульный лист без номера)
+%\usepackage{fancyhdr}
+%\pagestyle{fancy}
+%\fancyhf{}
+%\fancyfoot[C]{\thepage}
+%\renewcommand{\headrulewidth}{0pt}
+%\renewcommand{\footrulewidth}{0pt}
+
+% Заголовки глав и параграфов с нужными кеглями
+\usepackage{titlesec}
+
+\titleformat{\section}
+  {\normalfont\fontsize{18}{20}\bfseries}
+  {\thesection}{1em}{}
+
+\titleformat{\subsection}
+  {\normalfont\fontsize{16}{18}\bfseries}
+  {\thesubsection}{1em}{}
+
+% Для таблиц и рисунков
+\usepackage{caption}
+\captionsetup{font={small,bf}}  % small = примерно 12 pt при базовом 14 pt
+
+
+\usepackage[12pt]{extsizes}
 \usepackage{hyperref}
 \usepackage{amssymb,amsmath,amsthm}
 \usepackage{cleveref}
-\usepackage{caption}
 \usepackage{mathtools}
 \usepackage{multirow}
 
@@ -15,7 +56,7 @@
 \usepackage{graphicx} % Required for inserting images
 \usepackage{ulem}
 \usepackage{amsmath}
-\usepackage{geometry}
+%\usepackage{geometry}
 \geometry{top=2.5cm, bottom=2.5cm, left=2.5cm, right=2.5cm}
 \usepackage{hyperref}
 \usepackage{array}
@@ -30,8 +71,6 @@
 \usepackage[nottoc,numbib]{tocbibind} % Пакет tocbibind добавляет в оглавление пункты, которые обычно туда не попадают: библиографию, список иллюстраций, список таблиц и т. д.
 
 
-\sloppy
-\emergencystretch=1em
 
 \begin{document}
 
@@ -51,11 +90,11 @@
 
 \section*{Abstract}
 
-With the increasing number of Internet of Things (IoT) devices in home automation systems (HAS), the topologies of the networks that house these devices, as well as how data is stored
+With the increasing number of Internet of Things devices in home automation systems (HAS), the topologies of the networks that house these devices, as well as how data is stored
 and transferred between devices, are becoming an issue. Many systems that use a centralized approach in storing and processing information are characterized by a significant loss of
 functionality when a central node fails. In the course of the research the principles, methodologies and architectures applicable to hardware-software complexes for the construction
-of ADS were studied, which allow to increase the level of data security, fault tolerance and increase the speed of information transfer within the system due to the use of distributed
-approach to information storage and processing, and a prototype of distributed ADS was developed. The results of the conducted research and the architectural model proposed in it can
+of HAS were studied, which allow to increase the level of data security, fault tolerance and increase the speed of information transfer within the system due to the use of distributed
+approach to information storage and processing, and a prototype of distributed HAS was developed. The results of the conducted research and the architectural model proposed in it can
 be used not only in smart home systems, but also in smart cities and enterprises.
 
 \newpage
@@ -171,19 +210,24 @@ be used not only in smart home systems, but also in smart cities and enterprises
 
 \subsubsection{Топология «звезда»}
 В этой конфигурации все устройства подключаются к центральному узлу (хабу), который управляет коммуникацией между ними.
-Данную топологию используют протоколы WI-FI, Insteon, ZigBee, UWB, IDEN, CDMAOne, WIMAX, GSM, GPRS, UTMS.
+Данную топологию используют протоколы: Wi-Fi Zigbee, Zigbee Pro, Z-Wave, Bluetooth, Wi-Fi HaLow, Insteon, UWB, IDEN, CDMAOne, WIMAX, GSM, GPRS, UTMS.
 
 \subsubsection{Ячеистая топология}
 Ячеистая топология — базовая полносвязная топология компьютерных сетей и сетей связи, в которой каждая рабочая станция сети соединяется со всеми другими рабочими станциями этой же сети. Характеризуется высокой отказоустойчивостью, сложностью настройки и избыточным расходом кабеля в проводных сетях. Каждый узел имеет несколько возможных путей соединения с другими узлами, за счет этого такая топология очень устойчива, так как исчезновение одного из каналов не приводит к потере соединения между двумя компьютерами. Эта топология допускает соединение большого количества узлов и характерна, как правило, для крупных сетей, она строится из полносвязной путем удаления некоторых возможных связей.
-Топология применима для сетей с использованием протоколов UWB, WI-FI, Insteon, ZigBee, IDEN, CDMAOne, WIMAX, GSM, GPRS, UMTS.
+Топология применима для сетей с использованием протоколов UWB, Zigbee, Zigbee Pro, Thread, BLE Mesh, Z-Wave, Wi-Fi HaLow, LoRaWAN, Wirepas Mesh, IDEN, CDMAOne, WIMAX, GSM, GPRS, UMTS.
 
 \subsubsection{Топология «кластерное дерево»}
-Топология «кластерное дерево» образуется в основном в виде комбинаций упомянутых выше топологий. Основание дерева вычислительной сети располагается в точке (корень), в которой собираются коммуникационные линии информации (ветви дерева).
-Вычислительные сети с древовидной структурой строятся там, где невозможно непосредственное применение базовых сетевых структур в чистом виде.
+Топология «кластерное дерево» образуется как комбинаций вышеупомянутых топологий. Основание дерева вычислительной сети располагается в точке (корень), в которой собираются
+коммуникационные линии информации (ветви дерева). Вычислительные сети с древовидной структурой строятся там, где невозможно непосредственное применение базовых сетевых структур в
+чистом виде.
 
 
 \subsection{Протоколы беспроводных сетей}
-В данный момент большинство производителей ИВ используют централизованный подход для построения СДА \cite{Rus_alternative}. В качестве центра умного дома (ЦУД) выступает устройство (хаб), объединяющее конечные устройства в единую сеть. Сценарии взаимодействия устройств могут быть локальными (сценарии хранятся в ЦУД) или облачными. Вариант с локальным расположением сценариев более предпочтительный, так как повышается отзывчивость системы и ее отказоустойчивость. Отдельную сложность представляет объединение устройств из разных экосистем: различные комбинации связей <<устройство>>, <<ЦУД>>, <<облако>>.
+В данный момент большинство производителей ИВ используют централизованный подход для построения СДА \cite{Rus_alternative}. В качестве центра умного дома (ЦУД) выступает устройство
+(хаб), объединяющее конечные устройства в единую сеть. Сценарии взаимодействия устройств могут быть локальными (сценарии хранятся в ЦУД) или облачными. Вариант с локальным
+расположением сценариев более предпочтительный, так как повышается отзывчивость системы и ее отказоустойчивость. Отдельную сложность представляет объединение устройств из разных
+экосистем: различные комбинации связей <<устройство>>, <<ЦУД>>, <<облако>>.
+
 \begin{figure}[h]
     \centering
     \includegraphics[width=0.8\textwidth]{images/CommertialAlternativeDesign.png}
@@ -191,9 +235,13 @@ be used not only in smart home systems, but also in smart cities and enterprises
     \label{fig:cloud_event_processing}
 \end{figure}
 
-Большинство имеющихся на данный момент решений опираются на топологию <<дерево>>, где в качестве корня рассматривается ЦУД или облако, что проиллюстрированно на рис. \ref{fig:cloud_event_processing}. При этом структура может подразумевать наличие единственных ветвей из корня, например <<облако-ЦУД-устройства>> \cite{smart_home_review}. Тенденции 2023 и 2024 годов по переносу обработки событий в ЦУД, который ранее использовался лишь для маршрутизации сообщений от устройств к облаку, позволили увеличить надежность и уменьшить задержки в системе, но не исключили имеющиеся проблемы полностью.
+Большинство имеющихся на данный момент решений опираются на топологию <<дерево>>, где в качестве корня рассматривается ЦУД или облако, что проиллюстрированно на
+рис.~\ref{fig:cloud_event_processing}. При этом структура может подразумевать наличие единственных ветвей из корня, например <<облако-ЦУД-устройства>>~\cite{smart_home_review}.
+Тенденции 2023 и 2024 годов по переносу обработки событий в ЦУД, который ранее использовался лишь для маршрутизации сообщений от устройств к облаку, позволили увеличить надежность
+и уменьшить задержки в системе, но не исключили имеющиеся проблемы полностью.
 
-Стоит различать аппаратные ограничения, не позволяющие изменить топологию системы, связанные с особенностью работы протокола, например, топологию Bluetooth, позволяющую организовывать только связи типа точка-точка или точка - множество устройств, и архитектуру системы УД, подразумевающую централизованное выполнение сценария в ЦУД либо в облаке.
+Стоит различать аппаратные ограничения, не позволяющие изменить топологию системы, связанные с особенностью работы протокола, например, топологию Bluetooth, позволяющую организовывать
+только связи типа точка-точка или точка - множество устройств, и архитектуру системы УД, подразумевающую централизованное выполнение сценария в ЦУД либо в облаке.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -205,13 +253,18 @@ be used not only in smart home systems, but also in smart cities and enterprises
 
 Протокол Wi-Fi относится к семейству стандартов IEEE 802.11, реализующих беспроводную передачу данных в различных частотных диапазонах:
 \begin{itemize}
-    \item 2{,}4 ГГц — стандарты 802.11b/g/n;
-    \item 5 ГГц — 802.11a/ac;
-    \item 6 ГГц — 802.11ax (Wi-Fi 6E).
+    \item 2.4 ГГц -- стандарты 802.11b/g/n;
+    \item 5 ГГц -- 802.11a/ac;
+    \item 6 ГГц -- 802.11ax (Wi-Fi 6E).
 \end{itemize}
-Эти протоколы поддерживают высокую пропускную способность и широко распространены благодаря простой интеграции в клиентские устройства и устоявшейся практике применения. Однако они изначально не предназначены для энергоэффективных решений, что ограничивает их применение в системах домашней автоматизации, особенно если подразумевается использование батарейного питания. Так же различные виды конфигурации сети могут оказывать значительное влияние на время автономной работы IoT-устройства. \cite{WifiSmartHome}
 
-\paragraph{IEEE 802.11ah (Wi-Fi HaLow)} — расширение Wi-Fi в суб-ГГц диапазоне для IoT и промышленных задач. Обеспечивает дальность до километра, поддержку до тысяч устройств и низкое энергопотребление, что проиллюстрированно на рис.  \ref{fig:wifi_energy_eff}, благодаря механизмам Target Wake Time и RAW. Сохраняет уровень MAC совместимым с Wi-Fi, унаследовав безопасность и QoS.
+Эти протоколы поддерживают высокую пропускную способность и широко распространены благодаря простой интеграции в клиентские устройства и устоявшейся практике применения. Однако они
+изначально не предназначены для энергоэффективных решений, что ограничивает их применение в системах домашней автоматизации, особенно если подразумевается использование батарейного
+питания. Также различные виды конфигурации сети могут оказывать значительное влияние на время автономной работы IoT-устройства. \cite{WifiSmartHome}
+
+\paragraph{IEEE 802.11ah (Wi-Fi HaLow)} -- расширение Wi-Fi в суб-ГГц диапазоне для IoT и промышленных задач. Обеспечивает дальность до километра, поддержку до тысяч устройств и
+низкое энергопотребление, что проиллюстрировано на рисунке~\ref{fig:wifi_energy_eff}, благодаря механизмам Target Wake Time и RAW. Сохраняет совместимость на уровне MAC с Wi-Fi,
+унаследовав безопасность и QoS (Quality of Service).
 
 \begin{figure}[h]
     \centering
@@ -226,15 +279,23 @@ be used not only in smart home systems, but also in smart cities and enterprises
   \item \textbf{Узлы:} 
     \begin{itemize}
       \item \emph{STA} (датчики/актуаторы) с поддержкой энергосбережения.
-      \item \emph{AP} (Access Point) — единственный координатор сети, задаваемый при развертывании сети администратором.
-      \item \emph{Relay AP} (опционально) — специальные узлы (ретрансляторы)
+      \item \emph{AP} (Access Point) -- единственный координатор сети, задаваемый при развертывании сети администратором.
+      \item \emph{Relay AP} (опционально) -- специальные узлы (ретрансляторы)
     \end{itemize}
   \item \textbf{Топология:} поддерживаются несколько вариантов: звездная и древовидная с ретрансляцией (ограниченное дерево без полного L2-mesh) для расширения до удалённых STA.
+    \begin{itemize}
+      \item \emph{Звезда.}
+      \item \emph{Дерево:} дерево ограниченной глубины, без полного L2-mesh для расширения до удалённых STA
+    \end{itemize}
 \end{itemize}
 
 \paragraph{Преимущества и недостатки:}
 
-В качестве преимуществ IEEE 802.11ah можно выделить большую дальность связи (до 3 км вне помещений при использовании ретранслятора Relay AP), высокую плотность подключений (возможность обслуживания сотен устройств одной точкой доступа), а также низкое энергопотребление при малой активности. Вместе с тем, стандарту присущи: низкая пропускная способность по сравнению с Wi-Fi в диапазонах 2,4/5/6 ГГц, более высокая сложность и стоимость модулей по сравнению с устройствами на базе 802.15.4, из-за чего данный протокол не получил широкого распространения среди потребительских устройств, заняв только небольшую нишу промышленных IoT-устройств; а также сложности лицензирования различных диапазонов частот для разных стран.
+В качестве преимуществ IEEE 802.11ah можно выделить большую дальность связи (до 3 км вне помещений при использовании ретранслятора Relay AP), высокую плотность подключений (возможность
+обслуживания сотен устройств одной точкой доступа), а также низкое энергопотребление при малой активности. Вместе с тем, стандарту присущи: низкая пропускная способность по сравнению
+с Wi-Fi в диапазонах 2,4/5/6 ГГц, более высокая сложность и стоимость модулей по сравнению с устройствами на базе 802.15.4, из-за чего данный протокол не получил широкого
+распространения среди потребительских устройств, заняв только небольшую нишу промышленных IoT-устройств; а также сложности лицензирования различных диапазонов частот для разных
+стран.
 При отказе единственного AP вся BSS теряет синхронизацию и связь STA; стандарт не содержит механизмов внутреннего резервирования или автоматического фейловера.
 
 
@@ -245,37 +306,35 @@ be used not only in smart home systems, but also in smart cities and enterprises
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsubsection{Bluetooth Low Energy (BLE) и Bluetooth Mesh}
 
-Bluetooth Low Energy (BLE) — низкоэнергетичная радиотехнология, оптимизированная для передачи небольших объёмов данных с минимальным расходом батареи и поддерживающая энергосберегающие
+Bluetooth Low Energy (BLE) -- низкоэнергетичная радиотехнология, оптимизированная для передачи небольших объёмов данных с минимальным расходом батареи и поддерживающая энергосберегающие
 режимы. BLE определяет четыре базовые роли устройств: Central, Peripheral, Broadcaster и Observer, что позволяет строить радиосеть в топологии «Звезда» с центральным узлом (Central) и периферийными устройствами (Peripheral).
-Частотный диапазон BLE включает 40 каналов в диапазоне 2,4–2,4835 ГГц: 37 каналов для передачи данных и 3 каналов для рекламы. Для масштабируемых IoT-решений существует расширение Bluetooth Mesh, позволяющее узлам ретранслировать
-сообщения и формировать распределённую сеть «many-to-many» поверх BLE.
+Частотный диапазон BLE включает 40 каналов в диапазоне 2,4–2,4835 ГГц: 37 каналов для передачи данных и 3 канала для рекламы.
 
 \paragraph{Роли устройств}
 \begin{itemize}
-  \item \textbf{Peripheral} — Энергоэффективное устройство, периодически транслирующее (advertise) данные и ждущее подключения от центрального узла (Central) \ref{fig:fig_BLE_topology_unicast}. Характерные примеры: пульсометры, датчики температуры, трекеры активности.
-  \item \textbf{Central} — Стационарное устройство, выполняющее сканирование эфирных пакетов и устанавливающее соединения с одним или несколькими периферийными узлами. Часто это смартфоны, планшеты или концентраторы IoT--сетей, которым нужны данные от множества сенсоров.
-  \item \textbf{Broadcaster} — Устройство с односторонней рекламой: без установления соединения периодически рассылает рекламные пакеты с полезной информацией (beacons) \ref{fig:fig_BLE_topology_broadcast}. Используется для вещания маячков близости, рекламных кампаний, навигации в помещениях (Indoor positioning system).
-  \item \textbf{Observer} — Стационарное устройство-приёмник, которое пассивно сканирует эфир, собирая (несвязанную) информацию из рекламных пакетов Broadcaster’ов и Peripheral’ов. Применяется для мониторинга окружающей среды, подсчёта посетителей, сбора статистики о маячках.
+  \item \textbf{Peripheral} -- Энергоэффективное устройство, периодически транслирующее (advertise) данные и ожидающее подключения от центрального узла~\ref{fig:fig_BLE_topology_unicast}. Характерные примеры: пульсометры, датчики температуры, трекеры активности.
+  \item \textbf{Central} -- Стационарное устройство, выполняющее сканирование эфирных пакетов и устанавливающее соединения с одним или несколькими периферийными узлами. Часто это смартфоны, планшеты или концентраторы IoT-сетей, которым нужны данные от множества сенсоров.
+  \item \textbf{Broadcaster} -- Устройство с односторонней рекламой: без установления соединения периодически рассылает рекламные пакеты с полезной информацией (beacons) \ref{fig:fig_BLE_topology_broadcast}. Используется для вещания маячков близости, рекламных кампаний, системах навигации внутри помещений (Indoor positioning system).
+  \item \textbf{Observer} -- Стационарный приёмник, которое пассивно сканирует эфир, собирая (несвязанную) информацию из рекламных пакетов Broadcaster’ов и Peripheral’ов. Применяется для мониторинга окружающей среды, подсчёта посетителей, сбора статистики о маячках.
 \end{itemize}
 
 
 \begin{figure}[htbp]
   \centering
   % Первая подфигура, выровнена по верху
+    \begin{subfigure}[t]{0.45\textwidth}
+    \centering
+    \includegraphics[width=\linewidth]{images/BLE-topology-unicast.png}
+    \caption{Peripheral/Central}
+    \label{fig:fig_BLE_topology_unicast}
+  \end{subfigure}
+  % Вторая подфигура, тоже по верху
   \begin{subfigure}[t]{0.45\textwidth}
     \centering
     \includegraphics[width=\linewidth]{images/BLE-topology-broadcast.png}
     \caption{Broadcaster/Observer}
     \label{fig:fig_BLE_topology_broadcast}
   \end{subfigure}\hfill
-  % Вторая подфигура, тоже по верху
-  \begin{subfigure}[t]{0.45\textwidth}
-    \centering
-    \includegraphics[width=\linewidth]{images/BLE-topology-unicast.png}
-    \caption{Peripheral/Central}
-    \label{fig:fig_BLE_topology_unicast}
-  \end{subfigure}
-
   % Общая подпись
   \caption{Профили устройств BLE\cite{IMG_BLE_topologies}}
   \label{fig:twophotos}
