--- a/titlepage_example.tex
+++ b/titlepage_example.tex
@@ -40,6 +40,7 @@
 
 % Научный руководитель, рецензент
 \begin{flushright}
+\fontsize{12}{13}\selectfont
 \begin{minipage}[t]{0.65\textwidth}
 {Научный руководитель:} \\
 доцент, кафедра компьютерного моделирования и \\многопроцессорных систем,\\к.ф.-м.н., PhD\\Корхов Владимир Владиславович
@@ -50,7 +51,6 @@
 доцент, кафедра компьютерного моделирования и \\многопроцессорных систем,\\к.т.н.\\Дик Геннадий Давидович
 \end{minipage}
 \end{flushright}
-
 \vfill 
 
 {Санкт-Петербург}
