modified:   main.pdf 	modified:   main.tex 	modified:   main.toc 	modified:   main.xdv

--- a/main.tex
+++ b/main.tex
@@ -1012,8 +1012,8 @@ K, перестанут обрабатываться межзонные собы
 \end{thebibliography}
 
 \newpage
-\appendix
-\renewcommand{\thesection}{\Alph{section}} % Нумерация буквами A, B, C…
+%\appendix
+%\renewcommand{\thesection}{\Alph{section}} % Нумерация буквами A, B, C…
 
 % Заголовок первого приложения
 \chapter{Приложение}
