modified:   main.pdf 	modified:   main.tex 	modified:   main.toc 	modified:   main.xdv

--- a/main.tex
+++ b/main.tex
@@ -843,6 +843,210 @@ if (temp < 18) {
 
 \chapter{Глава 4. Распределённый отказаустойчивый кластер.}
 
+\section{Описание кластера.}
+
+
+\subsection{Общее положение.}
+
+\subsection{Описание устройств.}
+
+\subsection{Инструменты для развертывания кластера.}
+
+\subsubsection{K0s.}
+
+\subsubsection{K0sctl.}
+
+\subsection{Сервисы.}
+
+\subsection{Автоматизация сборки и развертывания.}
+
+
+
+\chapter{Глава 4. Распределённый отказаустойчивый кластер.}
+
+\section{Описание кластера.}
+
+Система представляет собой распределённый отказаустойчивый кластер, построенный на основе лёгкого Kubernetes-дистрибутива K0s и высокопроизводительной шины обмена сообщениями NATS с
+включённым механизмом JetStream. Архитектура обеспечивает устойчивую ретрансляцию данных между узлами, расположенными в различных географических или сетевых сегментах, даже при
+использовании динамических IP-адресов и NAT.
+
+\subsection{Общее положение.}
+
+Кластер состоит из двух узлов с ролями:
+\begin{itemize}
+\item \textbf{Контроллер-воркер (controller+worker)}: выполняет функции управляющей плоскости Kubernetes, а также может запускать пользовательские поды.
+\item \textbf{Рабочий узел (worker)}: предназначен исключительно для запуска сервисов ретрансляции и NATS-кластера.
+\end{itemize}
+
+Использование единственного контроллера-воркера упрощает инфраструктуру, снижает накладные расходы на управление и при этом позволяет сохранить возможность горизонтального масштабирования рабочих нагрузок. Аналогично, отдельный воркер-узел гарантирует изоляцию сервисов и высокую доступность при перезагрузке управляющего компонента.
+
+\subsection{Описание устройств.}
+
+В качестве физических и виртуальных хостов используются:
+\begin{itemize}
+\item \textbf{Ноутбук Lenovo G710}: процессор Intel x86\_64, 8~~ГБ RAM, Ubuntu 24.04 LTS. Предназначен для роли контроллера-воркера и локальной разработки.
+\item \textbf{Orange Pi 5}: одноплатный компьютер на базе ARM64 (Rockchip RK3588), 4~~ГБ RAM, Armbian 25.2.1 (CLI-редакция на базе Ubuntu 24.04 Noble). Используется в качестве рабочего узла с целевой архитектурой ARM, что потребовало настройки сборки многоархитектурных контейнеров.
+\end{itemize}
+
+Наличие хостов разной архитектуры обуславливает необходимость мультиплатформенной сборки образов (amd64 и arm64), что реализовано в CI-пайплайне.
+
+\subsection{Инструменты для развертывания кластера.}
+
+Для автоматизированной установки и конфигурации кластера используются следующие решения:
+
+\subsubsection{K0s.}
+
+K0s представляет собой комплект единого бинарного файла, включающего все ключевые компоненты Kubernetes (API-сервер, etcd, kubelet, kube-proxy). Основные преимущества выбора K0s:
+\begin{itemize}
+\item \textbf{Лёгковесность} — отсутствие множества внешних зависимостей и компонентов, упрощённая дистрибуция.
+\item \textbf{Упрощённая установка} — минимальное количество команд для развёртывания управляющей плоскости и рабочих узлов.
+\item \textbf{Компактная конфигурация} — единый YAML-файл для настройки всех элементов кластера.
+\item \textbf{Гибкость} — возможность включения ролей контроллера и воркера на одном узле через флаг \texttt{--enable-worker}.
+\end{itemize}
+
+Типичная конфигурация в \texttt{k0s.yaml} содержит указание сетевого плагина (\texttt{network.provider: kuberouter}), диапазонов адресов (\texttt{podCIDR: 10.244.0.0/16}, \texttt{serviceCIDR: 10.96.0.0/12}) и параметров хранения etcd.
+
+\subsubsection{K0sctl.}
+
+K0sctl — это CLI-инструмент для управления жизненным циклом K0s-кластера. Позволяет:
+\begin{itemize}
+\item Подготавливать узлы (устанавливать бинарники, настраивать службы) по SSH.
+\item Задавать роли \texttt{controller} и \texttt{worker} в едином файле \texttt{k0sctl.yaml}.
+\item Автоматически обновлять версии K0s и подключать новые узлы.
+\end{itemize}
+
+Пример раздела \texttt{hosts} в \texttt{k0sctl.yaml}:
+
+\begin{verbatim}
+hosts:
+
+* role: controller
+  ssh:
+  address: 192.168.1.123
+  user: root
+  keyPath: \~/.ssh/id\_rsa.pub
+  installFlags:
+
+  * \--enable-worker
+* role: worker
+  ssh:
+  address: 192.168.1.124
+  user: root
+  keyPath: \~/.ssh/id\_rsa.pub
+  \end{verbatim}
+
+\subsubsection{Helm.}
+
+Для управления приложениями в кластере применяется Helm:
+\begin{itemize}
+\item \textbf{Удобство шаблонизации} — позволяет параметризовать манифесты и быстро изменять конфигурацию.
+\item \textbf{Управление зависимостями} — возможность агрегировать несколько чартов (например, NATS + Prometheus) одним запуском.
+\item \textbf{Версионирование релизов} — откат к предыдущим версиям чартов в один шаг.
+\end{itemize}
+
+В частности, чарт NATS развёрнут через Helm с параметрами реплик, JetStream и PVC:
+
+\begin{verbatim}
+config:
+cluster:
+enabled: true
+replicas: 2
+jetstream:
+enabled: true
+fileStore:
+pvc:
+size: 2Gi
+\end{verbatim}
+
+\subsection{Сервисы.}
+
+В кластере функционируют две основные подсистемы:
+
+\begin{itemize}
+\item \textbf{NATS-кластер} — обеспечивает модель publish–subscribe. JetStream гарантирует доставку и хранение сообщений на диске.
+\item \textbf{Relay-service} — Python-приложение, подписанное на общий топик NATS. Получив сообщение, оно фильтрует по полю \texttt{id} и перенаправляет только подходящие сообщения на локальный радиомодуль.
+\end{itemize}
+
+Архитектура шлюзов позволяет легко добавлять новые зоны и узлы без изменения кода: достаточно задать шаблоны для фильтрации и подключить новый экземпляр Relay-service.
+
+\subsection{Автоматизация сборки и развертывания.}
+
+CI/CD реализован на базе GitHub Actions и включает этапы:
+
+\begin{enumerate}
+  \item \textbf{Test}: запуск \texttt{pytest} для проверки логики Relay-service.
+  \item \textbf{Build and Push Test Image}: сборка мультиархитектурных образов для amd64 и arm64 с помощью Docker Buildx и публикация под тегом \texttt{test}.
+  \item \textbf{Smoke}: базовое тестирование собранного контейнера (в перспективе — полноценные end-to-end-тесты).
+  \item \textbf{Publish}: вычисление следующей семантической версии из списка тегов в GitHub Container Registry и ретегирование образа под \texttt{latest} и \texttt{X.Y.Z}.
+\end{enumerate}
+
+Пример фрагмента workflow для определения версии:
+
+\begin{verbatim}
+
+# Получение списка тегов
+
+folders\_json=\$(gh api --paginate /users/\${OWNER}/packages/container/...)
+
+# Фильтрация X.Y.Z
+
+# Вычисление максимальной версии и инкремент патча
+
+\end{verbatim}
+
+Благодаря такой архитектуре и автоматизации новые образы становятся доступны для развертывания сразу после успешного прохождения CI/CD, что минимизирует время вывода обновлений в продакшен.
+
+\subsection{Этапы выполнения работ.}
+
+Процесс построения отказоустойчивого распределённого кластера включал в себя следующие ключевые этапы:
+
+\begin{enumerate}
+\item \textbf{Подготовка ОС и окружения}:
+\begin{itemize}
+\item Установка Ubuntu 24.04 LTS на контроллер-воркер (Lenovo G710) и Armbian 25.2.1 (на базе Ubuntu 24.04) на Orange Pi 5.
+\item Настройка SSH-доступа, установка необходимых зависимостей (curl, openssh-server, rsync и пр.).
+\end{itemize}
+
+\item \textbf{Развёртывание кластера Kubernetes с помощью K0s и K0sctl}:
+\begin{itemize}
+\item Генерация \texttt{k0sctl.yaml} с описанием ролей и SSH-доступа.
+\item Развёртывание командой \texttt{k0sctl apply}.
+\item Проверка статуса узлов и корректности функционирования компонентов.
+\end{itemize}
+
+\item \textbf{Развёртывание системы обмена сообщениями NATS}:
+\begin{itemize}
+\item Подготовка \texttt{nats-values.yaml} с включением кластерного режима и JetStream.
+\item Установка Helm-чарта с параметрами хранения (PVC) и количеством реплик.
+\item Проверка создания StatefulSet, PVC и подключения к NATS-эндпоинтам.
+\end{itemize}
+
+\item \textbf{Разработка и контейнеризация приложения Relay-service}:
+\begin{itemize}
+\item Написание Python-кода для фильтрации сообщений по идентификатору.
+\item Создание Dockerfile с поддержкой многоплатформенной сборки.
+\item Тестирование образов локально на обеих архитектурах.
+\end{itemize}
+
+\item \textbf{Настройка CI/CD на GitHub Actions}:
+\begin{itemize}
+\item Автоматическая сборка и тестирование на каждый push в ветку.
+\item Мультиархитектурная сборка через Docker Buildx.
+\item Автоматическое версионирование образов и публикация в GitHub Container Registry.
+\end{itemize}
+
+\item \textbf{Проброс портов и доступ к кластеру через NAT}:
+\begin{itemize}
+\item Использование динамического DNS (no-ip) на этапе тестирования.
+\item Конфигурация туннелей и проброса портов для доступа к API и NATS из внешней сети.
+\item Планируемый переход на статический IP или VPN-сеть в финальной версии.
+\end{itemize}
+\end{enumerate}
+
+Этапы выстраивались по нарастающей сложности — от базового окружения до полной автоматизации, что позволило оперативно выявлять и устранять ошибки на каждом уровне развертывания.
+
+
+
 
 \begin{figure}[ht]
     \centering
@@ -861,29 +1065,6 @@ if (temp < 18) {
 \end{figure}
 
 
-Шлюзы-ретрансляторы--кластер K0s--при выходе из строя какого-то узла, например, зоны
-K, перестанут обрабатываться межзонные события, связанные с зоной К. При этом функционал внутри и вне зоны
-К не изменится.
-
-
-
-\section{Добавление устройств и настройка сценариев}
-
-СДА состоит из конечных устройств, связанных по радиоканалу, и шлюзов-ретрансляторов, представляющих собой одноплатные компьютеры с установленными сервисами \texttt{k0s}. Настройка системы выполняется через единое графическое приложение, содержащее кнопку для начала настройки, поле для изменения параметров и кнопку для применения изменений.
-
-\begin{enumerate}[label=\textbf{\arabic*.}]
-    \item \textbf{Перевод системы в режим настройки.} 
-    
-    Пользователь нажимает кнопку <<Начать настройку системы>> в графическом интерфейсе. Приложение отправляет управляющую команду на все шлюзы-ретрансляторы, которые, в свою очередь, передают её конечным устройствам. Устройства переходят из режима эксплуатации в режим настройки и готовы к приёму новой конфигурации.
-    
-    \item \textbf{Внесение и отправка изменений.} 
-    
-    Через предоставленное текстовое или графическое поле в приложении вносятся необходимые изменения конфигурации. Это могут быть новые сценарии взаимодействия, логика работы исполнительных устройств и параметры ретрансляции сообщений. После завершения редактирования пользователь нажимает кнопку <<Применить настройки>>, и новая конфигурация передаётся на шлюзы-ретрансляторы.
-    
-    \item \textbf{Распространение конфигурации на конечные устройства.} 
-    
-    Шлюзы-ретрансляторы получают обновлённую конфигурацию и передают её по радиоканалу на исполнительные устройства. Датчики не требуют настройки, так как они только передают сообщения. Исполнительные устройства анализируют входящие сигналы и запускают соответствующие действия по заданным сценариям. После успешного применения настроек система может быть переведена обратно в режим работы тем же интерфейсом.
-\end{enumerate}
 
 
 
@@ -918,6 +1099,7 @@ K, перестанут обрабатываться межзонные собы
 Было опробовано два варианта распределения сценариев: их хранение и исполнение на устройстве-отправителе, порождающем событие и хранение сценариев на устройстве-исполнителе. В рамках проведенных экспериментов было установлено, что некоторые сложные команды, последовательный набор действий для первого варианта проводят к значительному увеличению времени обработки и излишней загруженности радиоканала, что потенциально уменьшает максимальное число устройств в системе.
 Планировщик осуществляет преобразование визуальных узлов и связей в JS код, выполняя синтаксический анализ, преобразованием узлов в лексемы с последующем объединением их в единый исполняемый файл. Так же в задачи планировщика входит разбиение файла настроек на компоненты связанности и определение целевого устройства, на которое будет отправлен сценарий.
 Также для дальнейшего тестирования система была сконфигурирована для работы с использованием ЦУД и для распределенной работы.
+
 
 \newpage
 
@@ -957,7 +1139,7 @@ K, перестанут обрабатываться межзонные собы
     \end{tabular}
     \caption{Среднее время выполнения операций}
 \end{table}
-    
+
 
 
 Использовалось готовое решение на базе протокола Zigbee с ЦУД в виде YNDX-00510 \cite{YNDX_hub} и
