modified:   main.pdf 	modified:   main.tex 	modified:   main.toc 	modified:   main.xdv 	modified:   main.pdf

--- a/main.tex
+++ b/main.tex
@@ -946,7 +946,15 @@ size: 2Gi
 \item \textbf{Relay-service} — Python-приложение, подписанное на общий топик NATS. Получив сообщение, оно фильтрует по полю \texttt{id} и перенаправляет только подходящие сообщения на локальный радиомодуль.
 \end{itemize}
 
-Архитектура шлюзов позволяет легко добавлять новые зоны и узлы без изменения кода: достаточно задать шаблоны для фильтрации и подключить новый экземпляр Relay-service.
+Архитектура шлюзов позволяет легко добавлять новые зоны и узлы без изменения кода: достаточно задать шаблоны для фильтрации и подключить новый экземпляр Relay-service. Со внутренней архитектурой кластера можно ознакомиться на рисунке~\ref{fig:InternalSystemDesign}.
+
+\begin{figure}[ht]
+    \centering
+    \includegraphics[width=0.8\textwidth]{images/InternalSystemDesign.png}
+    \captionsetup{justification=centering}
+    \caption{Компонентная структура и процессы взаимодействия в\\кластере K0s предложеннной системы}
+    \label{fig:InternalSystemDesign}
+\end{figure}
 
 \subsection{Автоматизация сборки и развертывания.}
 
@@ -958,20 +966,6 @@ CI/CD реализован на базе GitHub Actions и включает эт
   \item \textbf{Smoke}: базовое тестирование собранного контейнера (в перспективе — полноценные end-to-end-тесты).
   \item \textbf{Publish}: вычисление следующей семантической версии из списка тегов в GitHub Container Registry и ретегирование образа под \texttt{latest} и \texttt{X.Y.Z}.
 \end{enumerate}
-
-Пример фрагмента workflow для определения версии:
-
-\begin{verbatim}
-
-# Получение списка тегов
-
-folders\_json=\$(gh api --paginate /users/\${OWNER}/packages/container/...)
-
-# Фильтрация X.Y.Z
-
-# Вычисление максимальной версии и инкремент патча
-
-\end{verbatim}
 
 Благодаря такой архитектуре и автоматизации новые образы становятся доступны для развертывания сразу после успешного прохождения CI/CD, что минимизирует время вывода обновлений в продакшен.
 
@@ -1027,21 +1021,12 @@ folders\_json=\$(gh api --paginate /users/\${OWNER}/packages/container/...)
 
 
 
-\begin{figure}[ht]
-    \centering
-    \includegraphics[width=0.8\textwidth]{images/Fig09.png}
-    \caption{Пример взаимодействий конечных устройств}
-    \label{fig:Connect_end_device_example}
-\end{figure}
-
-
-\begin{figure}[ht]
-    \centering
-    \includegraphics[width=0.8\textwidth]{images/InternalSystemDesign.png}
-    \captionsetup{justification=centering}
-    \caption{Компонентная структура и процессы взаимодействия в\\кластере K0s предложеннной системы}
-    \label{fig:InternalSystemDesign}
-\end{figure}
+%\begin{figure}[ht]
+%    \centering
+%    \includegraphics[width=0.8\textwidth]{images/Fig09.png}
+%    \caption{Пример взаимодействий конечных устройств}
+%    \label{fig:Connect_end_device_example}
+%\end{figure}
 
 
 
@@ -1050,34 +1035,35 @@ folders\_json=\$(gh api --paginate /users/\${OWNER}/packages/container/...)
 
 
 
-\newpage
 
-\chapter{Глава 5}
+%\newpage
 
-\section{Графический интерфейс}
-Был написано графическое приложение рис.~\ref{fig:GUI_base} на языке Python c использованием фреймворка Qt, в котором производилась настройка системы и ее отладка.
+%\chapter{Глава 5}
 
-\begin{figure}[ht]
-    \centering
-    \includegraphics[width=0.8\textwidth]{images/Fig11.png}
-    \captionsetup{justification=centering}
-    \caption{Графическое приложение с созданным внутри\\сценарием для конечных устройств}
-    \label{fig:GUI_base}
-\end{figure}
+%\section{Графический интерфейс}
+%Был написано графическое приложение рис.~\ref{fig:GUI_base} на языке Python c использованием фреймворка Qt, в котором производилась настройка системы и ее отладка.
 
-Графический интерфейс позволяет прописывать и более сложные сценарии взадимодействия устройств, что можно увидеть на рис.~\ref{fig:GUI_adv}
+%\begin{figure}[ht]
+%    \centering
+%    \includegraphics[width=0.8\textwidth]{images/Fig11.png}
+%    \captionsetup{justification=centering}
+%    \caption{Графическое приложение с созданным внутри\\сценарием для конечных устройств}
+%    \label{fig:GUI_base}
+%\end{figure}
 
-\begin{figure}[ht]
-    \centering
-    \includegraphics[width=0.8\textwidth]{images/Fig12.png}
-    \caption{Пример более сложного сценария взаимодействия устройств}
-    \label{fig:GUI_adv}
-\end{figure}
+%Графический интерфейс позволяет прописывать и более сложные сценарии взадимодействия устройств, что можно увидеть на рис.~\ref{fig:GUI_adv}
 
-\section{Планировщик}
-Было опробовано два варианта распределения сценариев: их хранение и исполнение на устройстве-отправителе, порождающем событие и хранение сценариев на устройстве-исполнителе. В рамках проведенных экспериментов было установлено, что некоторые сложные команды, последовательный набор действий для первого варианта проводят к значительному увеличению времени обработки и излишней загруженности радиоканала, что потенциально уменьшает максимальное число устройств в системе.
-Планировщик осуществляет преобразование визуальных узлов и связей в JS код, выполняя синтаксический анализ, преобразованием узлов в лексемы с последующем объединением их в единый исполняемый файл. Так же в задачи планировщика входит разбиение файла настроек на компоненты связанности и определение целевого устройства, на которое будет отправлен сценарий.
-Также для дальнейшего тестирования система была сконфигурирована для работы с использованием ЦУД и для распределенной работы.
+%\begin{figure}[ht]
+%    \centering
+%    \includegraphics[width=0.8\textwidth]{images/Fig12.png}
+%    \caption{Пример более сложного сценария взаимодействия устройств}
+%    \label{fig:GUI_adv}
+%\end{figure}
+
+%\section{Планировщик}
+%Было опробовано два варианта распределения сценариев: их хранение и исполнение на устройстве-отправителе, порождающем событие и хранение сценариев на устройстве-исполнителе. В рамках проведенных экспериментов было установлено, что некоторые сложные команды, последовательный набор действий для первого варианта проводят к значительному увеличению времени обработки и излишней загруженности радиоканала, что потенциально уменьшает максимальное число устройств в системе.
+%Планировщик осуществляет преобразование визуальных узлов и связей в JS код, выполняя синтаксический анализ, преобразованием узлов в лексемы с последующем объединением их в единый исполняемый файл. Так же в задачи планировщика входит разбиение файла настроек на компоненты связанности и определение целевого устройства, на которое будет отправлен сценарий.
+%Также для дальнейшего тестирования система была сконфигурирована для работы с использованием ЦУД и для распределенной работы.
 
 
 \newpage
